<resources>
    <string name="app_name">M_C_Ap_modelQAApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="fragment1_1_label">Fragment1_1</string>
    <string name="fragment1_2_label">Fragment1_2</string>
    <string name="fragment1_3_label">Fragment1_3</string>
    <string name="fragment1_4_label">Fragment1_4</string>
    <string name="fragment1_5_label">Fragment1_5</string>
    <string name="fragment1_6_label">Fragment1_6</string>
    <string name="fragment1_7_label">Fragment1_7</string>
    <string name="fragment1_8_label">Fragment1_8</string>
    <string name="fragment1_9_label">Fragment1_9</string>
    <string name="fragment1_10_label">Fragment1_10</string>
    <string name="fragment1_11_label">Fragment1_11</string>
    <string name="fragment1_12_label">Fragment1_12</string>
    <string name="fragment1_13_label">Fragment1_13</string>
    <string name="fragment1_14_label">Fragment1_14</string>


    <string name="fragment2_1_label">Fragment2_1</string>
    <string name="fragment2_2_label">Fragment2_2</string>
    <string name="fragment2_3_label">Fragment2_3</string>
    <string name="fragment2_4_label">Fragment2_4</string>
    <string name="fragment2_5_label">Fragment2_5</string>
    <string name="fragment2_6_label">Fragment2_6</string>
    <string name="fragment2_7_label">Fragment2_7</string>
    <string name="fragment2_8_label">Fragment2_8</string>
    <string name="fragment2_9_label">Fragment2_9</string>
    <string name="fragment2_10_label">Fragment2_10</string>
    <string name="fragment2_11_label">Fragment2_11</string>
    <string name="fragment2_12_label">Fragment2_12</string>
    <string name="fragment2_13_label">Fragment2_13</string>
    <string name="fragment2_14_label">Fragment2_14</string>

    <string name="fragment3_1_label">Fragment3_1</string>

    <string name="fragment4_1_label">Fragment4_1</string>
    <string name="fragment4_2_label">Fragment4_2</string>
    <string name="fragment4_3_label">Fragment4_3</string>

    <string name="fragment5_1_label">Fragment5_1</string>
    <string name="fragment5_2_label">Fragment5_2</string>
    <string name="fragment5_3_label">Fragment5_3</string>
    <string name="fragment5_4_label">Fragment5_4</string>
    <string name="fragment5_5_label">Fragment5_5</string>
    <string name="fragment5_6_label">Fragment5_6</string>

    <string name="fragment6_1_label">Fragment6_1</string>
    <string name="fragment6_2_label">Fragment6_2</string>
    <string name="fragment6_3_label">Fragment6_3</string>
    <string name="fragment6_4_label">Fragment6_4</string>

    <string name="fragment7_1_label">Fragment7_1</string>
    <string name="fragment7_2_label">Fragment7_2</string>
    <string name="fragment7_3_label">Fragment7_3</string>
    <string name="fragment7_4_label">Fragment7_4</string>
    <string name="fragment7_5_label">Fragment7_5</string>
    <string name="fragment7_6_label">Fragment7_6</string>
    <string name="fragment7_7_label">Fragment7_7</string>
    <string name="fragment7_8_label">Fragment7_8</string>
    <string name="fragment7_9_label">Fragment7_9</string>
    <string name="fragment7_10_label">Fragment7_10</string>
    <string name="fragment7_11_label">Fragment7_11</string>
    <string name="fragment7_12_label">Fragment7_12</string>
    <string name="fragment7_13_label">Fragment7_13</string>
    <string name="fragment7_14_label">Fragment7_14</string>

    <string name="fragment8_1_label">Fragment8_1</string>
    <string name="fragment8_2_label">Fragment8_2</string>
    <string name="fragment8_3_label">Fragment8_3</string>
    <string name="fragment8_4_label">Fragment8_4</string>






    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_fragment1_1">Hello first fragment</string>
    <string name="hello_fragment1_2">Hello second fragment. Arg: %1$s</string>


    <string name="tab_title_1">1</string>
    <string name="tab_title_2">2</string>
    <string name="tab_title_3">3</string>
    <string name="tab_title_4">4</string>
    <string name="tab_title_5">5</string>
    <string name="tab_title_6">6</string>
    <string name="tab_title_7">7</string>
    <string name="tab_title_8">8</string>
    <string name="tab_title_9">9</string>
    <string name="tab_title_10">10</string>
    <string name="tab_title_11">11</string>
    <string name="tab_title_12">12</string>
    <string name="tab_title_13">13</string>
    <string name="tab_title_14">14</string>
    <string name="tab_title_15">15</string>
    <string name="tab_title_16">16</string>
    <string name="tab_title_17">17</string>
    <string name="tab_title_18">18</string>

    <!-- ドロワー・メニュー用文字列 -->
    <string name="genre_select_label">ジャンル選択</string>
    <string name="menu_normal_label">普通薬</string>
    <string name="menu_powerful_drug_label">劇薬</string>
    <string name="menu_poisonal_drug_label">毒薬</string>
    <string name="menu_psychotropic_drug_label">向精神薬</string>
    <string name="menu_gaiyou_label">塗り薬</string>
    <string name="menu_eye_drops_label">点眼</string>
    <string name="menu_kanpou_label">漢方薬</string>
    <string name="menu_powder">散剤</string>
    <string name="menu_inhalant_label">吸入薬</string>
    <string name="menu_label">h</string>
    <string name="menu_a_little_story_label">i</string>

    <!-- 設定画面用文字列 -->
    <string name="settings_titile">設定</string>
    <string name="menu_change_button_label">変更</string>
    <string name="menu_logout_label">ログアウト</string>
    <string name="no_login_user">ログインしていません</string>
    <string name="change_disp_name">表示名を変更しました</string>
    <string name="logout_complete_message">ログアウトしました</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>