<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nomal"
            android:title="@string/menu_normal_label"/>
        <item
            android:id="@+id/nav_power"
            android:title="@string/menu_powerful_drug_label"/>
        <item
            android:id="@+id/nav_poisonal"
            android:title="@string/menu_poisonal_drug_label"/>
        <item
            android:id="@+id/nav_psychotropic"
            android:title="@string/menu_psychotropic_drug_label"/>
        <item
            android:id="@+id/nav_gaiyou"
            android:title="@string/menu_gaiyou_label"/>
        <item
            android:id="@+id/nav_megusuri"
            android:title="@string/menu_eye_drops_label"/>
        <item
            android:id="@+id/nav_powder"
            android:title="@string/menu_powder"/>
        <item
            android:id="@+id/nav_kyuunyuu"
            android:title="@string/menu_inhalant_label"/>

        <item
            android:id="@+id/nav_about_this_app"
            android:title="@string/menu_about_this_app"/>


    </group>
</menu>