<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Fragment1_1">

    <fragment
        android:id="@+id/Fragment1_1"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_1"
        android:label="@string/fragment1_1_label"
        tools:layout="@layout/fragment1_1">

        <action
            android:id="@+id/action_Fragment1_1_to_Fragment1_2"
            app:destination="@id/Fragment1_2" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_2"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_2"
        android:label="@string/fragment1_2_label"
        tools:layout="@layout/fragment1_2">

        <action
            android:id="@+id/action_Fragment1_2_to_Fragment1_1"
            app:destination="@id/Fragment1_1" />

        <action
            android:id="@+id/action_Fragment1_2_to_Fragment1_3"
            app:destination="@id/Fragment1_3" />

    </fragment>

    <fragment
        android:id="@+id/Fragment1_3"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_3"
        android:label="@string/fragment1_3_label"
        tools:layout="@layout/fragment1_3">

        <action
            android:id="@+id/action_Fragment1_3_to_Fragment1_2"
            app:destination="@id/Fragment1_2" />

        <action
            android:id="@+id/action_Fragment1_3_to_Fragment1_4"
            app:destination="@id/Fragment1_4" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_4"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_4"
        android:label="@string/fragment1_4_label"
        tools:layout="@layout/fragment1_4">

        <action
            android:id="@+id/action_Fragment1_4_to_Fragment1_3"
            app:destination="@id/Fragment1_3" />

        <action
            android:id="@+id/action_Fragment1_4_to_Fragment1_5"
            app:destination="@id/Fragment1_5" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_5"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_5"
        android:label="@string/fragment1_5_label"
        tools:layout="@layout/fragment1_5">

        <action
            android:id="@+id/action_Fragment1_5_to_Fragment1_4"
            app:destination="@id/Fragment1_4" />

        <action
            android:id="@+id/action_Fragment1_5_to_Fragment1_6"
            app:destination="@id/Fragment1_6" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_6"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_6"
        android:label="@string/fragment1_6_label"
        tools:layout="@layout/fragment1_6">

        <action
            android:id="@+id/action_Fragment1_6_to_Fragment1_5"
            app:destination="@id/Fragment1_5" />

        <action
            android:id="@+id/action_Fragment1_6_to_Fragment1_7"
            app:destination="@id/Fragment1_7" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_7"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_7"
        android:label="@string/fragment1_7_label"
        tools:layout="@layout/fragment1_7">

        <action
            android:id="@+id/action_Fragment1_7_to_Fragment1_6"
            app:destination="@id/Fragment1_6" />

        <action
            android:id="@+id/action_Fragment1_7_to_Fragment1_8"
            app:destination="@id/Fragment1_8" />
    </fragment>


    <fragment
        android:id="@+id/Fragment1_8"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_8"
        android:label="@string/fragment1_8_label"
        tools:layout="@layout/fragment1_8">

        <action
            android:id="@+id/action_Fragment1_8_to_Fragment1_7"
            app:destination="@id/Fragment1_7" />

        <action
            android:id="@+id/action_Fragment1_8_to_Fragment1_9"
            app:destination="@id/Fragment1_9" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_9"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_9"
        android:label="@string/fragment1_9_label"
        tools:layout="@layout/fragment1_9">

        <action
            android:id="@+id/action_Fragment1_9_to_Fragment1_8"
            app:destination="@id/Fragment1_8" />

        <action
            android:id="@+id/action_Fragment1_9_to_Fragment1_10"
            app:destination="@id/Fragment1_10" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_10"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_10"
        android:label="@string/fragment1_10_label"
        tools:layout="@layout/fragment1_10">

        <action
            android:id="@+id/action_Fragment1_10_to_Fragment1_9"
            app:destination="@id/Fragment1_9" />

        <action
            android:id="@+id/action_Fragment1_10_to_Fragment1_11"
            app:destination="@id/Fragment1_11" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_11"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_11"
        android:label="@string/fragment1_11_label"
        tools:layout="@layout/fragment1_11">

        <action
            android:id="@+id/action_Fragment1_11_to_Fragment1_10"
            app:destination="@id/Fragment1_10" />

        <action
            android:id="@+id/action_Fragment1_11_to_Fragment1_12"
            app:destination="@id/Fragment1_12" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_12"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_12"
        android:label="@string/fragment1_12_label"
        tools:layout="@layout/fragment1_12">

        <action
            android:id="@+id/action_Fragment1_12_to_Fragment1_11"
            app:destination="@id/Fragment1_11" />

        <action
            android:id="@+id/action_Fragment1_12_to_Fragment1_13"
            app:destination="@id/Fragment1_13" />
    </fragment>

    <fragment
        android:id="@+id/Fragment1_13"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_13"
        android:label="@string/fragment1_13_label"
        tools:layout="@layout/fragment1_13">

        <action
            android:id="@+id/action_Fragment1_13_to_Fragment1_12"
            app:destination="@id/Fragment1_12" />

        <action
            android:id="@+id/action_Fragment1_13_to_Fragment1_14"
            app:destination="@id/Fragment1_14" />
    </fragment>


    <fragment
        android:id="@+id/Fragment1_14"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.nomal.Fragment1_14"
        android:label="@string/fragment1_14_label"
        tools:layout="@layout/fragment1_14"/>

    <action
        android:id="@+id/action_Fragment1_14_to_Fragment1_13"
        app:destination="@id/Fragment1_13" />





    <fragment
        android:id="@+id/Fragment2_1"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.powerful.Fragment2_1"
        tools:layout="@layout/fragment2_1">
    </fragment>







    <activity
        android:id="@+id/MainActivity"
        android:name="jp.techacademy.masahito.chikami.m_c_ap_modelqaapp.MainActivity"
        tools:layout="@layout/activity_main">
        <!--<action
            android:id="@+id/action_move_Fragment1_1"
            app:destination="@id/Fragment1_1" />-->

    </activity>

</navigation>